[fix] dropdown menu accesibilty issue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <header class="header">
         <a href="https://shopify.com" class="header-logo">
-          <img
+          <img alt="shopify logo"
             src="https://crushingit.tech/hackathon-assets/shopify-icon-desktop.svg"
           />
         </a>
@@ -27,7 +27,7 @@
   <path fill-rule="evenodd" clip-rule="evenodd" d="M12.3226 13.3833C11.3996 14.0841 10.2484 14.5 9 14.5C5.96243 14.5 3.5 12.0376 3.5 9C3.5 5.96243 5.96243 3.5 9 3.5C12.0376 3.5 14.5 5.96243 14.5 9C14.5 10.2484 14.0841 11.3996 13.3833 12.3226L16.2803 15.2197C16.5732 15.5126 16.5732 15.9874 16.2803 16.2803C15.9874 16.5732 15.5126 16.5732 15.2197 16.2803L12.3226 13.3833ZM13 9C13 11.2091 11.2091 13 9 13C6.79086 13 5 11.2091 5 9C5 6.79086 6.79086 5 9 5C11.2091 5 13 6.79086 13 9Z" fill="#B5B5B5"/>
 </svg>
             </div>
-            <input type="text"  class="search-input" placeholder="Search" >
+            <input name="search" type="text"  class="search-input" placeholder="Search" >
         </div>
         <div class="header-menu">
           <button type="button" class="notif-btn" id="notif-btn" aria-label="expand notification" aria-haspopup="true" aria-controls="notification-popup" aria-expanded="false">
@@ -63,7 +63,7 @@
                 </span>
             </div>
           </div>
-          <div class="menu-dropdown" id="menu-dropdown" aria-labelledby=" menu-dropdown-btn">
+          <div class="menu-dropdown" id="menu-dropdown" aria-labelledby="menu-dropdown-btn">
             <div class="menu-dropdown-header">
                 <div class="menu-dropdown-header-inner">
 
@@ -76,7 +76,7 @@
                         <path d="M13.3332 4L5.99984 11.3333L2.6665 8" stroke="#303030" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
             </div>
-            <div class="menu-item"><a href="#" role="menuitem">
+            <div class="menu-item" role="menuitem"><a href="#" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
   <path fill-rule="evenodd" clip-rule="evenodd" d="M13.257 3H6.74302C6.35944 3 5.9971 3.17611 5.76012 3.47772L3.37394 6.51468C3.13169 6.823 3 7.20375 3 7.59586V8.25C3 9.31867 3.60958 10.245 4.5 10.7001V15.25C4.5 16.2165 5.2835 17 6.25 17H13.75C14.7165 17 15.5 16.2165 15.5 15.25V10.7001C16.3904 10.245 17 9.31867 17 8.25V7.76879C17 7.26465 16.8307 6.77511 16.5192 6.3787L14.2399 3.47772C14.0029 3.17611 13.6406 3 13.257 3ZM13 15.5H13.75C13.8881 15.5 14 15.3881 14 15.25V11C13.212 11 12.5014 10.6686 12 10.1375C11.4986 10.6686 10.788 11 10 11C9.21199 11 8.50138 10.6686 8 10.1375C7.49862 10.6686 6.78801 11 6 11V15.25C6 15.3881 6.11193 15.5 6.25 15.5H10V13C10 12.4477 10.4477 12 11 12H12C12.5523 12 13 12.4477 13 13V15.5ZM6 9.5H5.75C5.05964 9.5 4.5 8.94036 4.5 8.25V7.59586C4.5 7.53985 4.51881 7.48545 4.55342 7.44141L6.86453 4.5H13.1355L15.3397 7.30543C15.4436 7.43757 15.5 7.60075 15.5 7.76879V8.25C15.5 8.94036 14.9404 9.5 14.25 9.5H14C13.3096 9.5 12.75 8.94036 12.75 8.25V7.75C12.75 7.33579 12.4142 7 12 7C11.5858 7 11.25 7.33579 11.25 7.75V8.25C11.25 8.94036 10.6904 9.5 10 9.5C9.30964 9.5 8.75 8.94036 8.75 8.25V7.75C8.75 7.33579 8.41421 7 8 7C7.58579 7 7.25 7.33579 7.25 7.75V8.25C7.25 8.94036 6.69036 9.5 6 9.5Z" fill="#303030"/>
 </svg>
@@ -89,28 +89,28 @@
                 <div class="menu-divider"></div>
                 <ul class="menu-list" role="menu">
                     
-                <li class="menu-item" >
-                    <a href="#" class="" role="menuitem">
+                <li class="menu-item" role="menuitem">
+                    <a href="#" class="" >
                         Help Center
                     </a>
                 </li>
-                <li class="menu-item" >
-                     <a href="#" class="" role="menuitem">
+                <li class="menu-item" role="menuitem">
+                     <a href="#" class="" >
                         Changelog
                     </a>
                 </li>
-                <li class="menu-item" >
-                     <a href="#" class="" role="menuitem">
+                <li class="menu-item" role="menuitem">
+                     <a href="#" class="" >
                         Community forums
                     </a>
                 </li>
-                <li class="menu-item" >
-                     <a href="#" class="" role="menuitem">
+                <li class="menu-item" role="menuitem" >
+                     <a href="#" class="" >
                         Hire a Shopify Partner
                     </a>
                 </li>
-                <li class="menu-item" >
-                     <a href="#" class="" role="menuitem">
+                <li class="menu-item" role="menuitem">
+                     <a href="#" class="" >
                         Keyboard shortcuts
                     </a>
                 </li>
@@ -128,10 +128,10 @@
                     </div>
                 </div>
                 <ul class="menu-list" role="menu">
-<li class="menu-item" ><a href="#" role="menuitem">
+<li class="menu-item" role="menuitem"><a href="#" >
     Manage account
 </a></li>
-<li class="menu-item" ><a href="#" role="menuitem">
+<li class="menu-item" role="menuitem"><a href="#" >
 Logout
 </a></li>
             </ul>
@@ -155,7 +155,7 @@ Logout
         </div>
            <a href="https://shopify.com/pricing" target="_blank" class="btn btn--light is-mobile">Select a plan</a>
         </div>
-        <div class="section-content" aria-expanded="true">
+        <div class="section-content" id="section-content">
           <div class="section-content-top">
             <div class="section-content-top-inner">
               <div class="section-title-wrap">
@@ -165,19 +165,19 @@ Logout
                 </p>
                   <div class="progress-area">
               <span><span id="task-count">0</span> / 5 completed</span>
-              <div class="progress-bar" role="progressbar">
+              <div class="progress-bar" role="progressbar" aria-label="0% completed">
                 <div class="progress-bar-fill" ></div>
               </div>
             </div>
               </div>
               <div class="section-content-top-btn-wrap">
-                <button class="icon-btn section-toggle-btn" aria-label="minimize section"><img src="https://crushingit.tech/hackathon-assets/icon-arrow-up.svg" alt=""/></button>
+                <button class="icon-btn section-toggle-btn" aria-label="minimize section" aria-controls="section-content"  aria-expanded="true"><img src="https://crushingit.tech/hackathon-assets/icon-arrow-up.svg" alt=""/></button>
               </div>
             </div>
           
           </div>
           <div class="accordions-container" id="accordions-container">
-            <div class="accordion opened" aria-expanded="true">
+            <div class="accordion opened" >
               <div class="flex jc-between">
                 <div class="accordion-inner">
                     <label class="accordion-label" for="c1">
