updated menu items link, adjusted notifcation popup width

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <path d="M13.3332 4L5.99984 11.3333L2.6665 8" stroke="#303030" stroke-width="1.33333" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
             </div>
-            <div class="menu-item" role="menuitem"><a href="#" >
+            <div class="menu-item" role="menuitem"><a href="https://admin.shopify.com" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
   <path fill-rule="evenodd" clip-rule="evenodd" d="M13.257 3H6.74302C6.35944 3 5.9971 3.17611 5.76012 3.47772L3.37394 6.51468C3.13169 6.823 3 7.20375 3 7.59586V8.25C3 9.31867 3.60958 10.245 4.5 10.7001V15.25C4.5 16.2165 5.2835 17 6.25 17H13.75C14.7165 17 15.5 16.2165 15.5 15.25V10.7001C16.3904 10.245 17 9.31867 17 8.25V7.76879C17 7.26465 16.8307 6.77511 16.5192 6.3787L14.2399 3.47772C14.0029 3.17611 13.6406 3 13.257 3ZM13 15.5H13.75C13.8881 15.5 14 15.3881 14 15.25V11C13.212 11 12.5014 10.6686 12 10.1375C11.4986 10.6686 10.788 11 10 11C9.21199 11 8.50138 10.6686 8 10.1375C7.49862 10.6686 6.78801 11 6 11V15.25C6 15.3881 6.11193 15.5 6.25 15.5H10V13C10 12.4477 10.4477 12 11 12H12C12.5523 12 13 12.4477 13 13V15.5ZM6 9.5H5.75C5.05964 9.5 4.5 8.94036 4.5 8.25V7.59586C4.5 7.53985 4.51881 7.48545 4.55342 7.44141L6.86453 4.5H13.1355L15.3397 7.30543C15.4436 7.43757 15.5 7.60075 15.5 7.76879V8.25C15.5 8.94036 14.9404 9.5 14.25 9.5H14C13.3096 9.5 12.75 8.94036 12.75 8.25V7.75C12.75 7.33579 12.4142 7 12 7C11.5858 7 11.25 7.33579 11.25 7.75V8.25C11.25 8.94036 10.6904 9.5 10 9.5C9.30964 9.5 8.75 8.94036 8.75 8.25V7.75C8.75 7.33579 8.41421 7 8 7C7.58579 7 7.25 7.33579 7.25 7.75V8.25C7.25 8.94036 6.69036 9.5 6 9.5Z" fill="#303030"/>
 </svg>
@@ -90,27 +90,27 @@
                 <ul class="menu-list" role="menu">
                     
                 <li class="menu-item" role="menuitem">
-                    <a href="#" class="" >
+                    <a href="https://admin.shopify.com"  >
                         Help Center
                     </a>
                 </li>
                 <li class="menu-item" role="menuitem">
-                     <a href="#" class="" >
+                     <a href="https://admin.shopify.com"  >
                         Changelog
                     </a>
                 </li>
                 <li class="menu-item" role="menuitem">
-                     <a href="#" class="" >
+                     <a href="https://admin.shopify.com"  >
                         Community forums
                     </a>
                 </li>
                 <li class="menu-item" role="menuitem" >
-                     <a href="#" class="" >
+                     <a href="https://admin.shopify.com"  >
                         Hire a Shopify Partner
                     </a>
                 </li>
                 <li class="menu-item" role="menuitem">
-                     <a href="#" class="" >
+                     <a href="https://admin.shopify.com"  >
                         Keyboard shortcuts
                     </a>
                 </li>
@@ -128,10 +128,10 @@
                     </div>
                 </div>
                 <ul class="menu-list" role="menu">
-<li class="menu-item" role="menuitem"><a href="#" >
+<li class="menu-item" role="menuitem"><a href="https://admin.shopify.com" >
     Manage account
 </a></li>
-<li class="menu-item" role="menuitem"><a href="#" >
+<li class="menu-item" role="menuitem"><a href="https://admin.shopify.com" >
 Logout
 </a></li>
             </ul>
@@ -418,7 +418,7 @@ Logout
                     </div>
                     <div class="accordion-content">
 
-                        <p class="">
+                        <p >
                             Choose a payment provider to start accepting payments.
                             You’ll need to create an account with the payment provider
                             and set it up with your Shopify store.
